--- a/public/modules/users/views/settings/social-accounts.client.view.html
+++ b/public/modules/users/views/settings/social-accounts.client.view.html
@@ -10,7 +10,8 @@
 	</div>
 	<h3 class="col-md-12 text-center">Connect other social accounts:</h3>
 	<div class="col-md-12 text-center">
-		<a href="/auth/facebook" data-ng-hide="isConnectedSocialAccount('facebook')" class="undecorated-link">
+		<h3>Sorry, this is not available at this time.</h3>
+		<!-- <a href="/auth/facebook" data-ng-hide="isConnectedSocialAccount('facebook')" class="undecorated-link">
 			<img src="/modules/users/img/buttons/facebook.png">
 		</a>
 		<a href="/auth/twitter" data-ng-hide="isConnectedSocialAccount('twitter')" class="undecorated-link">
@@ -21,6 +22,6 @@
 		</a>
 		<a href="/auth/linkedin" data-ng-hide="isConnectedSocialAccount('linkedin')" class="undecorated-link">
 			<img src="/modules/users/img/buttons/linkedin.png">
-		</a>
+		</a> -->
 	</div>
 </section>
