--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -3,32 +3,35 @@
 <section data-ng-controller="HomeController">
 	<section class="col-lg-12 hidden-md hidden-sm hidden-xs" id="Toprowuiview">
 		<!-- <img id="mainSecImg" src="modules/core/img/brand/eee2abc-plate-only.png"> -->
-		<div class="col-lg-3 visible-lg"><h5 class="spanTitle3"><i>Let us cook for you!</i></h5></div>
+		<div class="col-lg-3 visible-lg"><h3 class="spanTitle3"><i>Let us cook for you!</i></h3></div>
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/eee-txt-green-sm.png"></div>
-		<div class="col-lg-3 visible-lg"><h5 class="spanTitle4">412-352-5439</h5></div>
+		<div class="col-lg-3 visible-lg"><h3 class="spanTitle4">412-352-5439</h3></div>
 
 		
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h1>Catering, Private-Chef Services<br>&amp; Delivered Meals</h1></div>
 
-		<div class="col-lg-3 visible-lg"><h5 class="spanTitle3"><i>Serving the Pittsburgh-area</i></h5></div>
+		<div class="col-lg-3 visible-lg"><h3 class="spanTitle3"><i>Serving Pittsburgh</i></h3></div>
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/plate-sm.png"></div>
-		<div class="col-lg-3 visible-lg" style="vertical-align: baseline;"><h5 class="spanTitle4"><i>eecpgh@comcast.net</i></h5></div>
+		<div class="col-lg-3 visible-lg" style="vertical-align: baseline;"><h3 class="spanTitle4"><i>eecpgh@comcast.net</i></h3></div>
 		<div class="col-md-12 col-sm-12 col-xs-12 hidden-lg"><h5 class="spanTitle5">412-352-5439</h5><h5><i>eecpgh@comcast.net</i></h5></div>
     </section>
 	
 	<section class="col-md-12 hidden-lg" id="Toprowuiview">
 		<h1 class="visible-md">Catering, Private-Chef Services<br>&amp; Delivered Meals</h1>
 		<h2 class="visible-sm visible-xs">Catering, Private-Chef Services<br>&amp; Delivered Meals</h2>
-		<h5 class="spanTitle3" align="center"><i>Let us cook for you!&nbsp;&nbsp;&nbsp;412-352-5439&nbsp;&nbsp;&nbsp;eecpgh@comcast.net</i></h5>
+		<h5 class="spanTitle3" align="center"><i>Let us cook for you!</i></h5> <!-- &nbsp;&nbsp;&nbsp;<br><br>412-352-5439<br><br>&nbsp;&nbsp;&nbsp;eecpgh@comcast.net-->
+		<h3 class="spanTitle3" align="center"><i>412-352-5439</i></h3>
+		<h3 class="spanTitle3" align="center"><i>eecpgh@comcast.net</i></h3>
 	</section>
 		
 
 		<!-- LEFT COLUMN______________________________________________________________________________________ -->
+		
 		<section class="col-md-4" id="Lmidcol">
 			<h4>Private Chef Services</h4>
 			<div class="col-md-12" id="image">
-				<img src="modules/core/img/meal2.jpg" alt="Home Chef Services"/>
-		        <h3>A special night awaits!&nbsp;</h3>
+				<img class="img-responsive" src="modules/core/img/meal2.jpg" alt="Home Chef Services"/>
+		        <h3>A Special Night Awaits!&nbsp;</h3>
 		        <h2>Dinner-<i>for</i>-Two</h2> 
 		        <p>Dinner-for-Two is complete with candlelight, wine, wait service, fresh ingredients, upscale presentation, and full cleanup.<br><br>
 		        Enjoy a special in-home experience.  Also makes a great gift idea. Call for scheduling.</p>
@@ -37,8 +40,8 @@
 
 			<h4>Daily or Weekly Meals</h4>
 			<div class="col-md-12" id="image">
-				<img src="modules/core/img/meal1.jpg" alt="Home Chef Services"/>
-		         <h3>Freshly-made Meals!</h3><br>
+				<img class="img-responsive" src="modules/core/img/meal1.jpg" alt="Home Chef Services"/>
+		         <h3>Freshly-Made Meals!</h3><br>
 		         <h2>Your Personal Chef</h2>
 		         <p>Breakfast, lunch, or dinner.   Around-the-clock, weekly, or on special occasions.  Our hours of operation depend solely on the wants and needs of the customer.<br><br>
 		         Contact us to schedule and see how a private chef can make a wonderful difference in your life.</p>
@@ -46,7 +49,7 @@
 			</div>
 
 			<h4>Dietary Restrictions &amp; Routines</h4>
-			<div class="col-md-12" id="image" style="padding-bottom: 37px;">
+			<div class="col-md-12" id="image">
 				<p>Interested in Paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
 			</div>
 
@@ -60,7 +63,7 @@
 				<div class="col-md-12" id="imageTWO">
 					<h2>Your Event Specialist</h2>
 					<!-- <h3>We Cater to You.</h3> -->
-					<h6>Offering full catering services for any event.</h6>
+					<p>Offering full catering services for any event.</p>
 					<ul>
 						<li>Holidays &amp; Celebrations</li>
 						<li>Corporate Meetings &amp; Luncheons</li>
@@ -68,7 +71,7 @@
 						<li>Baby, Bridal Showers, &amp; more!</li>
 					</ul>
 					<p>We make sure to deliver on the promise of delicious food and great service.  Contact us at <a href="tel:1+412-352-5439">(412)352-5439</a> to discuss your next event.</p>
-					<h6>Additionally, we can provide:</h6>
+					<p>Additionally, we can provide:</p>
 					<ul>
 						<li>Children's meals</li>
 						<li>Dietary-specific Meals &amp; planning</li>
@@ -91,7 +94,7 @@
 
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
-				<ul class="nav" style="padding-bottom: 64px;">
+				<ul class="nav" style="padding-bottom: 33px;">
 					<li><a href="https://www.facebook.com/EastEndEatz" id="social1" target="_blank" title="fb.com/EastEndEatz"></a></li>
 					<!-- <li><a href="" id="social2" target="_blank"></a></li> -->
 					<li><a href="https://twitter.com/eastendeatz" id="social3" target="_blank"></a></li>
@@ -100,19 +103,24 @@
 			</div>
 		</section>
 
-		<!-- Right COLUMN______________________________________________________________________________________ -->
-		<section class="col-md-4" id="Rmidcol">
-
-			<div class="col-md-12 insideCmidCol" onclick="location.href='http://eastendeatz.herokuapp.com/#!/menu' "> <!--  -->
-				<h3 align="center"><span id="red">&#10087</span> Our Mission <span id="red">&#10087</span></h3>
-					<h4 align="center">Fresh, Local, Organic, Upscale</h4>
-				<h5 align="center"><small style="color: white;">Click to View Sample Menu</small></h5>
+		<!-- Right COLUMN______________________________________________________________________________________ --><!-- onclick="location.href='http://eastendeatz.herokuapp.com/#!/auth' " --><!-- <h3 align="center"><span id="red">&#10087</span> Our Mission <span id="red">&#10087</span></h3>
+						<h4 align="center">Fresh, Local, Organic, Upscale</h4>
+					<h5 align="center"><small style="color: white;">VIEW OUR MENU'S</small></h5> -->	
+		<section class="col-md-4" id="Rmidcol" ng-controller="FoodsController">
+			
+			<div class="col-md-12 insideCmidCol" style="z-index: 1;">
+				
+				<a ui-sref="listFoods">
+					<h3 align="center"><span id="red">&#10087</span> View Our Menu's <span id="red">&#10087</span></h3>
+					<h3 align="center">Fresh, Local, Organic, Upscale</h3>
+				</a>
 			</div>
+		
 			
 			<h4>Meal Delivery Services</h4>
 			<div class="col-md-12" id="image">
-				<img src="modules/core/img/meal3.jpg" alt="Home Chef Services"/>
-		        <h3>Delivery to Your Door&nbsp;</h3>
+				<img class="img-responsive" src="modules/core/img/meal3.jpg" alt="Home Chef Services"/>
+		        <h3>Delivery To Your Door&nbsp;</h3>
 		        <p>Delicious meals freshly delivered.  Suit your needs - Healthy eating, Convenience, Freshness, Quality. Ask us for more info on meal delivery options.</p>
 		        <!-- -->
 		        <!-- <h2>On-time Freshness</h2>
@@ -123,18 +131,23 @@
 		        Delivered meals bring customization, freshness, and convenience.  Book a scheduling time soon.</p>  -->
 			</div>
 
-			<h4>Small-Batch Cooking</h4>
+			<h4>Prepared Meals</h4>
 			<div class="col-md-12">
-				<h2>Prepared Food</h2>
-				<p>With small batch cooking we can prepare health and delicious food in quantities to last a few days or through the week.  It's a very popular option amongst customers who liking having options in the refrigerator, and for those who want healthy food consistently on hand at home.</p><br>
-				<p>We are happy when customers are pleasantly surprised how easy and convenient life becomes when you have prepared food on-hand.  We recommend you try this out!</p>
+				<h2>Small-Batch Cooking</h2>
+				<p>Small batch cooking is a very popular option amongst customers who liking having prepared food options at home.
+				<br><br>
+				Customers tell us they are pleasantly surprised in the convenience that prepared meals provide to them.  We recommend you try it!
+				<br><br>
+				Small batch cooking is also great for small to mid-size gatherings.  We can accommodate cooking order quanties to meet any of your needs.
+				</p>
+
 			</div>
 			
 			
 			<h4>Meet Us</h4>
-			<div class="col-md-12">
+			<div class="col-md-12" style="padding-bottom: 27px;">
 				<i class="fa fa-user fa-3x"></i>
-				<h5><b>Chef Sean Kelly</b></h5>
+				<p><b>Chef Sean Kelly</b></p>
 				<p>Professionally trained at <b>The Culinary Institute of America</b> <em>(Hyde Park, New York)</em>, with 15+ years executive chef experience in fine dining, upscale hotels, private events, catering, and small-batch cooking.<br>
 				</p>
 			</div>
