--- a/public/modules/foods/views/edit-food.client.view.html
+++ b/public/modules/foods/views/edit-food.client.view.html
@@ -1,3 +1,5 @@
+<img class="bg" src="modules/core/img/bg1.jpg">
+
 <section class="col-md-12" id="Toprowuiview" data-ng-controller="FoodsController" data-ng-init="findOne()">
 
 
