--- a/public/modules/users/views/signup.client.view.html
+++ b/public/modules/users/views/signup.client.view.html
@@ -18,7 +18,9 @@
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="signup()" class="signin form-horizontal" novalidate autocomplete="off">
 			<fieldset>
-				<!-- <div class="form-group">
+
+
+				<div class="form-group">
 					<label for="firstName">First Name</label>
 					<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
 				</div>
@@ -37,10 +39,14 @@
 				<div class="form-group">
 					<label for="password">Password</label>
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-				</div> -->
+				</div>
+
+
+
+
 				
 				<div class="text-center form-group">
-					<!-- <button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp; -->
+					<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
 					<a href="/#!/signin" class="show-signup">Sign in</a>
 				</div>
 
