--- a/public/modules/users/views/signup.client.view.html
+++ b/public/modules/users/views/signup.client.view.html
@@ -19,7 +19,7 @@
 		<form data-ng-submit="signup()" class="signin form-horizontal" novalidate autocomplete="off">
 			<fieldset>
 
-
+<!-- 
 				<div class="form-group">
 					<label for="firstName">First Name</label>
 					<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
@@ -39,14 +39,16 @@
 				<div class="form-group">
 					<label for="password">Password</label>
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-				</div>
+				</div> -->
 
 
 
 
 				
 				<div class="text-center form-group">
-					<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
+					<!-- <button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp; -->
+
+					<h1>Signup is closed to the public.  Contact webmaster if you are business admin.</h1>
 					<a href="/#!/signin" class="show-signup">Sign in</a>
 				</div>
 
