content change dinner for 2

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -33,8 +33,7 @@
 				<img class="img-responsive" src="modules/core/img/meal2.jpg" alt="Home Chef Services"/>
 		        <h3>A Special Night Awaits!&nbsp;</h3>
 		        <h2>Dinner-<i>for</i>-Two</h2> 
-		        <p>Dinner-for-Two is complete with candlelight, wine, wait service, fresh ingredients, upscale presentation, and full cleanup.<br><br>
-		        Enjoy a special in-home experience.  Also makes a great gift idea. Call for scheduling.</p>
+		        <p>Dinner-for-Two is an in-home dining experience.<br>  Reserve a special night where you leave the cooking to us.  You will enjoy a gourmet meal in a private dinner setting and also not have to worry about cleanup. Makes a great gift idea (gift certificates available). <i>Please call to schedule.<i/></p>
 		                
 			</div>
 
@@ -94,7 +93,7 @@
 
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
-				<ul class="nav" style="padding-bottom: 33px;">
+				<ul class="nav" style="padding-bottom: 53px;">
 					<li><a href="https://www.facebook.com/EastEndEatz" id="social1" target="_blank" title="fb.com/EastEndEatz"></a></li>
 					<!-- <li><a href="" id="social2" target="_blank"></a></li> -->
 					<li><a href="https://twitter.com/eastendeatz" id="social3" target="_blank"></a></li>
