--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,4 +1,4 @@
-<img class="bg" src="modules/core/img/bg1.jpg">
+<!-- <img class="bg" src="modules/core/img/bg1.jpg"> -->
 <ui-view>
 <section data-ng-controller="HomeController">
 	<section class="col-lg-12 hidden-md hidden-sm hidden-xs" id="Toprowuiview">
@@ -155,7 +155,7 @@
 </section>
 </ui-view>
 <section class="col-md-12" class="bottomAcknowledgement">
-	<p>&copy; 2014 East End Eatz</p>
+	<p>&copy; 2014 East End Eatz  <span><a href="/#!/signin"><i class="fa fa-square fa-2x pull-right" style="margin-top: 2px; color: red;"></i></a></span></p>
 	<p>Website by
 		<a href="http://www.creativemonsterconsulting.com" target="_blank">Creative Monster Consulting, LLC.</a>
 	</p>
