--- a/public/modules/foods/views/list-foods.client.view.html
+++ b/public/modules/foods/views/list-foods.client.view.html
@@ -5,7 +5,7 @@
     
         <div class="page-header">
             <h1 align="center">Fresh, Local, Organic, Upscale</h1>
-            <h4 align="center" style="color: black;">Custom menus, seasonal choices, specaial dietary requirements, &amp; event planning are available.  Call to discuss.</h4>
+            <h4 align="center" style="color: black;">Custom menus, seasonal choices, special dietary requirements, &amp; event planning are available.  Call to discuss.</h4>
         </div>
 
         <div class="col-md-12 menuWrapper">
