--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,4 +1,4 @@
-<!-- <img class="bg" src="modules/core/img/bg1.jpg"> -->
+<img class="bg" src="modules/core/img/bg1.jpg">
 <ui-view>
 <section data-ng-controller="HomeController">
 	<section class="col-lg-12 hidden-md hidden-sm hidden-xs" id="Toprowuiview">
