--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -54,12 +54,36 @@ h6 {font-family: 'Playfair Display', serif; color: white; text-shadow: black 0.2
 .nav {text-align: center;}
 .nav li {list-style: none; float: right;}
 
+
+nav > ul > li > a > span {
+  color: white;
+  font-family: 'Muli', sans-serif;
+  font-variant: small-caps;
+}
+.dropdown-menu {background-color: rgba(0, 0, 0, 0.6);}
+.dropdown-menu > li > a {
+  color: #FF4040;
+}
+.dropdown-menu > li > a:hover {
+  background-color: white;
+   color: #FF4040;
+}
+
 @media (min-width: 768px) {
 
   .navbar-nav > li > a {
     padding-top: 6px;
     padding-bottom: 6px;
   }
+}
+
+.bottomText {
+ padding: 0;
+}
+.fa-key {
+  color: #FF4040;
+  background: rgba(255, 255, 255, .6);
+  padding: 4px;
 }
 
 #linavone {background: #FF4040; font-family: 'Muli', sans-serif; color: #A60000; font-variant: small-caps;}
