--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -73,6 +73,7 @@
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-52019855-1', 'eastendeatz.com');
+		  ga('require', 'displayfeatures');
 		  ga('send', 'pageview');
 
 		</script>
