--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -49,7 +49,8 @@
 
 			<h4>Dietary Restrictions &amp; Routines</h4>
 			<div class="col-md-12" id="image">
-				<p>Interested in Paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
+				<p>Interested in Paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  <br>East End Eatz Catering and Private Chef Services in Pittsburgh has you covered. Give us a ring at <a href="tel:+14123525439">412-352-5439</a>, or send us an email at <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
+				<span class="visible-md" style="padding-bottom: 61px;"></span>
 			</div>
 
 		</section>
@@ -69,7 +70,7 @@
 						<li>Family Parties, Reunions, &amp; Graduations</li>
 						<li>Baby, Bridal Showers, &amp; more!</li>
 					</ul>
-					<p>We make sure to deliver on the promise of delicious food and great service.  Contact us at <a href="tel:1+412-352-5439">(412)352-5439</a> to discuss your next event.</p>
+					<p>We make sure to deliver on the promise of delicious food and great service.  Contact us at <a href="tel:1+412-352-5439">412-352-5439</a> to discuss your next event.</p>
 					<p>Additionally, we can provide:</p>
 					<ul>
 						<li>Children's meals</li>
@@ -82,7 +83,7 @@
 
 			<h4>Who We Are</h4>
 			<div class="col-md-12">	
-				<p>We are a hardworking, dedicate group whose mission is to provide upscale event, business, and in-home catering and private chef services.
+				<p>We are a hardworking, dedicate group of Pittsburgh Chefs whose mission is to provide upscale event, business, and in-home catering and private chef services throughout Pittsburgh.
 				<br><br>
 				Sourcing only the freshest, local, and organic ingredients prepared by top-class, experienced chefs,  we aim for the highest-quality cuisine and memorable experiences.
 				<br><br>
@@ -93,13 +94,18 @@
 
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
-				<ul class="nav" style="padding-bottom: 53px;">
+				<ul class="nav">
+					<li><a href="https://plus.google.com/b/116194228166431269701/116194228166431269701/about" id="social5" target="_blank" title="Google Plus EastEndEatz"></a></li>
 					<li><a href="https://www.facebook.com/EastEndEatz" id="social1" target="_blank" title="fb.com/EastEndEatz"></a></li>
 					<!-- <li><a href="" id="social2" target="_blank"></a></li> -->
 					<li><a href="https://twitter.com/eastendeatz" id="social3" target="_blank"></a></li>
 					<!-- <li><a href="" id="social4"></a></li> -->
 				</ul>
+				<span class="visible-md" style="padding-bottom: 23px;"></span>
+				<span class="visible-lg" style="padding-bottom: 63px;"></span>
 			</div>
+
+			<h4 class="hidden-md">Let's Discuss Your Next Event!</h4>
 		</section>
 
 		<!-- Right COLUMN______________________________________________________________________________________ --><!-- onclick="location.href='http://eastendeatz.herokuapp.com/#!/auth' " --><!-- <h3 align="center"><span id="red">&#10087</span> Our Mission <span id="red">&#10087</span></h3>
@@ -144,11 +150,14 @@
 			
 			
 			<h4>Meet Us</h4>
-			<div class="col-md-12" style="padding-bottom: 27px;">
+			<div class="col-md-12" style="padding-bottom: 21px;">
 				<i class="fa fa-user fa-3x"></i>
 				<p><b>Chef Sean Kelly</b></p>
-				<p>Professionally trained at <b>The Culinary Institute of America</b> <em>(Hyde Park, New York)</em>, with 15+ years executive chef experience in fine dining, upscale hotels, private events, catering, and small-batch cooking.<br>
+				<p>Professionally trained at <b>The Culinary Institute of America</b> <em>(Hyde Park, New York).</em>
+				<br><br>
+				15+ years executive chef experience in fine dining, upscale hotels, private events, catering, and small-batch cooking.<br>
 				</p>
+				<h3><a ui-sref="listFoods">View Our Menu's</a></h3>
 			</div>
 
 		</section>	
