minor css fixes

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -157,7 +157,7 @@
 				<br><br>
 				15+ years executive chef experience in fine dining, upscale hotels, private events, catering, and small-batch cooking.<br>
 				</p>
-				<h3><a ui-sref="listFoods">View Our Menu's</a></h3>
+				<h3 class="visible-md visible-lg" style="z-index: 1;"><a ui-sref="listFoods">View Our Menu's</a></h3>
 			</div>
 
 		</section>	
